# verordnungsampel

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORTFORMAT.md  KONZEPT.md  NOTICE  PORTIERUNGSPLAN.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  USER-GUIDE.md  build_exe.bat  llms.txt  pyproject.toml  requirements.txt  start.bat  verordnungsampel_gui.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: stale.yml  verordnungsampel-tests.yml  welcome.yml
data/seed/: README.md  UPDATE_METHODE.md  amrl_anlage_III.json  atc.json  icd10.json  praxisbesonderheiten.json  quellen.json  regeln.json
data/seed/_archiv/2026-04-12/: amrl_anlage_V.json  amrl_anlage_VI_A.json  amrl_anlage_VI_B.json
data/seed/_raw/: amrl_III_2025-10-09.txt  amrl_VI_2025-05-07.txt  amrl_V_2026-03-24.txt  amrl_V_candidate.txt
data/translations/: de.json  en.json
docs/: MARKTVERGLEICH.md  MARKTVERGLEICH_NACHTRAG_PARAGRAPH106.md  RESOURCES_DIAGNOSTIC_PAPER.md  WEB_MVP.md
docs/legal/: DSGVO_KONZEPT.md  GESAMTEINSCHAETZUNG.md  MARKEN_RECHERCHE.md  RECHTSGUTACHTEN_HAFTUNG.md  RECHTSGUTACHTEN_MDSW.md  RECHTSGUTACHTEN_PUBLIKATION_LIZENZ.md  RECHTSGUTACHTEN_RUO.md
scripts/: update_amrl.py
src/verordnungsampel/: __init__.py  i18n.py
src/verordnungsampel/audit/: __init__.py  compliance_log.py
src/verordnungsampel/cli/: __init__.py  main.py
src/verordnungsampel/db/: __init__.py  connection.py  schema.py  seed.py
src/verordnungsampel/engine/: __init__.py  coverage.py  evaluator.py  justification_fsm.py  praxisbesonderheit.py  rules.py
src/verordnungsampel/gui/: __init__.py  app.py  disclaimer_dialog.py  main_window.py  strings_de.py
src/verordnungsampel/gui/tabs/: __init__.py  check_tab.py  justify_tab.py  log_tab.py  reminder_tab.py  sources_tab.py  workflow_tab.py
src/verordnungsampel/output/: __init__.py  vorab_workflow.py
src/verordnungsampel/utils/: __init__.py  logger.py  paths.py
src/verordnungsampel/web/: __init__.py  app.py
tests/: conftest.py  test_bug_regressions.py  test_bug_regressions_20260623.py  test_coverage_analysis.py  test_database.py  test_disclaimer_dialog.py  test_evaluator.py  test_gui_integration.py  test_i18n.py  test_justification_fsm.py  test_pattern_matching.py  test_praxisbesonderheit.py  test_seed_meta_and_cli.py  test_vorab_workflow.py  test_web_app.py
