[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verordnungsampel"
version = "0.1.0"
description = "Research-use software draft for local ICD-10-GM/ATC checks against public German prescribing rule sets (AM-RL, PRISCUS) with transparent risk indicators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Lukas Geiger", email = "hallo@um-bruch.org" }
]
keywords = ["verordnungsampel", "am-rl", "g-ba", "icd-10-gm", "atc", "priscus", "praxisbesonderheiten", "health-policy", "prescribing-rules", "research-use-only", "local-first", "pyside6", "sqlite"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "Flask>=3.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.4",
]
gui = [
    "PySide6>=6.6.0",
]
web = [
    "Flask>=3.0",
]

[project.scripts]
verordnungsampel = "verordnungsampel.cli.main:main"

[project.urls]
Homepage = "https://um-bruch.org"
Repository = "https://github.com/research-line/verordnungsampel"
Issues = "https://github.com/research-line/verordnungsampel/issues"
Documentation = "https://github.com/research-line/verordnungsampel#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verordnungsampel = ["data/seed/*.json", "gui/icons/*.svg", "gui/icons/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
